tests/errors/compiler/no_comma_in_init_list/arr_init.c
void main()
{
	int arr[2] = { 1 2 };
}
